--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory(02-simple-triangle)
 add_subdirectory(03-shader-class)
 add_subdirectory(04-texture)
 add_subdirectory(05-simple-cube)
+add_subdirectory(06-camera)
 
 
 
