--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(04-texture)
 add_subdirectory(05-simple-cube)
 add_subdirectory(06-camera)
 add_subdirectory(07-lighting)
+add_subdirectory(08-lighting-map)
 
 
 
