linux support and shader delete segfault bug fix

--- a/07-lighting/CMakeLists.txt
+++ b/07-lighting/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(EXE_NAME lighting)
+set(EXE_NAME 07-lighting)
 aux_source_directory(./src src)
 add_executable(${EXE_NAME} ${src})
 target_link_libraries(${EXE_NAME} PRIVATE glfw glad::glad)
