--- a/02-simple-triangle/CMakeLists.txt
+++ b/02-simple-triangle/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(EXE_NAME simple-triangle)
+set(EXE_NAME 02-simple-triangle)
 aux_source_directory(./src src)
 add_executable(${EXE_NAME} ${src})
 target_link_libraries(${EXE_NAME} PRIVATE glfw glad::glad)
