--- a/05-simple-cube/CMakeLists.txt
+++ b/05-simple-cube/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(EXE_NAME simple-cube)
+set(EXE_NAME 05-simple-cube)
 aux_source_directory(./src src)
 add_executable(${EXE_NAME} ${src})
 target_link_libraries(${EXE_NAME} PRIVATE glfw glad::glad)
