--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,12 @@ endif()
 include(FetchContent)
 # set(EXECUTABLE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 find_package(glfw3 REQUIRED)
 find_package(glad CONFIG)
 if (NOT glad::glad)
-  MESSAGE(WARNING "Cannot find glad, try compile from source.")
+  MESSAGE(STATUS "Cannot find glad, try compile from source.")
   include_directories(/usr/include)
   add_library(glad OBJECT common/glad/glad.c common/glad/glad.h)
   target_include_directories(glad PUBLIC common/glad)
@@ -49,6 +49,7 @@ add_subdirectory(07-lighting)
 add_subdirectory(08-lighting-map)
 add_subdirectory(09-multi-light)
 add_subdirectory(10-mesh)
+add_subdirectory(11-load-model)
 
 
 # target_link_libraries(main PRIVATE assimp::assimp)
