[feat](14) depth test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(10-mesh)
 add_subdirectory(11-load-model)
 add_subdirectory(12-imgui)
 add_subdirectory(13-input-system)
+add_subdirectory(14-depth-test)
 
 ##################### demo
 add_executable(imgui_demo 3rdparty/imgui/imgui_demo.cpp)
