--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory(14-depth-test)
 add_subdirectory(15-stencil-test)
 add_subdirectory(16-alpha-blend)
 add_subdirectory(17-face-culling)
+add_subdirectory(18-frame-buffer)
 
 ##################### demo
 add_executable(imgui_demo 3rdparty/imgui/imgui_demo.cpp)
