[feat](nanoR) add logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,19 +13,24 @@ ENDIF ()
 
 if (NOT CMAKE_BUILD_TYPE)
   set (CMAKE_BUILD_TYPE Release)
+else()
+  set (CMAKE_BUILD_TYPE Debug)
 endif()
 
 include(FetchContent)
 # set(EXECUTABLE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set(CMAKE_CXX_STANDARD 20)
+
 include_directories(3rdparty)
 
 find_package(glfw3 REQUIRED)
+
 find_package(imgui CONFIG)
 if (NOT TARGET imgui)
   include(3rdparty/imgui.cmake)
 endif()
+
 find_package(glad CONFIG)
 if (NOT TARGET glad::glad)
   MESSAGE(STATUS "Cannot find glad, try compile from source.")
@@ -34,13 +39,22 @@ if (NOT TARGET glad::glad)
   target_include_directories(glad PUBLIC 3rdparty/glad)
   add_library(glad::glad ALIAS glad)
 endif()
+
 find_package(glm REQUIRED)
+
 FetchContent_Declare(assimp
                      GIT_REPOSITORY https://github.com/assimp/assimp.git
                      GIT_TAG        v5.2.5 
 )
 FetchContent_MakeAvailable(assimp)
 
+FetchContent_Declare(fmt
+                     GIT_REPOSITORY https://github.com/fmtlib/fmt
+                     GIT_TAG        10.1.0
+)
+FetchContent_MakeAvailable(fmt)
+
+add_subdirectory(nanoR)
 add_subdirectory(01-create-window)
 add_subdirectory(02-simple-triangle)
 add_subdirectory(03-shader-class)
@@ -64,26 +78,3 @@ add_subdirectory(19-cube-map)
 ##################### demo
 add_executable(imgui_demo 3rdparty/imgui/imgui_demo.cpp)
 target_link_libraries(imgui_demo PRIVATE glfw glad::glad imgui)
-
-
-# target_link_libraries(main PRIVATE assimp::assimp)
-
-#################################################
-
-# cmake_minimum_required(VERSION 3.5)
-# project(myproject)
-
-# set(CMAKE_CXX_STANDARD 11)
-
-# find_package(OpenGL REQUIRED)
-# include_directories(${OPENGL_INCLUDE_DIR})
-# link_libraries(${OPENGL_LIBRARIES})
-
-# find_package(GLEW REQUIRED)
-# include_directories(${GLEW_INCLUDE_DIRS})
-# link_libraries(${GLEW_LIBRARIES})
-
-# set(SOURCE_FILES main.cpp)
-# add_executable(myproject ${SOURCE_FILES})
-
-# target_link_libraries(myproject glfw3 X11 Xxf86vm Xrandr pthread Xi dl Xinerama Xcursor)
