[refactor](all) FetchContent to get all dependenies
- EXPORT_COMPILE_COMMANDS to generate compile database

--- a/01-create-window/CMakeLists.txt
+++ b/01-create-window/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(EXE_NAME 01-create-window)
 aux_source_directory(./src src)
 add_executable(${EXE_NAME} ${src})
-target_link_libraries(${EXE_NAME} PRIVATE glfw glad::glad)
+target_link_libraries(${EXE_NAME} PRIVATE glfw glad)
