--- a/15-stencil-test/CMakeLists.txt
+++ b/15-stencil-test/CMakeLists.txt
@@ -4,4 +4,4 @@ include_directories(./src)
 file(GLOB_RECURSE src COFIGURE_DEPENDS src/*.cpp)
 # aux_source_directory(./src src)
 add_executable(${EXE_NAME} ${src})
-target_link_libraries(${EXE_NAME} PRIVATE glfw glad::glad assimp::assimp imgui)
+target_link_libraries(${EXE_NAME} PRIVATE glfw glad assimp::assimp imgui)
