--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.26)
 project(learn-opengl C CXX)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "") # works
+set(EXPORT_COMPILE_COMMANDS ON) # generate compile database
 
 IF (WIN32)
 # add_definitions(-DWIN32)
-	MESSAGE(STATUS "Now is windows")
+	MESSAGE(STATUS "Now on windows")
 ELSEIF (APPLE)
-	MESSAGE(STATUS "Now is Apple systens.")
+	MESSAGE(STATUS "Now on Apple systens.")
 ELSEIF (UNIX)
-	MESSAGE(STATUS "Now is UNIX-like OS's.")
+	MESSAGE(STATUS "Now on UNIX-like OS's.")
 ENDIF ()
 
 if (NOT CMAKE_BUILD_TYPE)
@@ -18,7 +18,7 @@ else()
 endif()
 
 include(FetchContent)
-# set(EXECUTABLE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+set(EXECUTABLE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
@@ -26,19 +26,21 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 
 include_directories(3rdparty)
 
-find_package(glfw3 REQUIRED)
+set(GLAD_PROFILE "core")
+FetchContent_Declare(glad
+                     GIT_REPOSITORY https://github.com/Dav1dde/glad.git
+                     GIT_TAG        v0.1.36
+)
 
-find_package(glad CONFIG)
-if (NOT TARGET glad::glad)
-  MESSAGE(STATUS "Cannot find glad, try compile from source.")
-  file(GLOB glad_src CONFIGURE_DEPENDS 3rdparty/glad/glad.c)
-  add_library(glad OBJECT ${glad_src})
-  target_include_directories(glad PUBLIC 3rdparty/glad)
-  add_library(glad::glad ALIAS glad)
-  MESSAGE(STATUS "Glad compile done.")
-endif()
+FetchContent_Declare(glm
+                     GIT_REPOSITORY https://github.com/g-truc/glm
+                     GIT_TAG        0.9.9.8
+)
 
-find_package(glm REQUIRED)
+FetchContent_Declare(glfw
+                     GIT_REPOSITORY https://github.com/glfw/glfw
+                     GIT_TAG        3.3.8
+)
 
 FetchContent_Declare(assimp
                      GIT_REPOSITORY https://github.com/assimp/assimp.git
@@ -55,8 +57,9 @@ FetchContent_Declare(imgui
                      GIT_TAG        v1.89.9-docking
 )
 
-FetchContent_MakeAvailable(assimp fmt imgui)
+FetchContent_MakeAvailable(glfw assimp fmt glad)
 include(3rdparty/imgui.cmake)
+include(3rdparty/glm.cmake)
 
 add_subdirectory(nanoR)
 add_subdirectory(01-create-window)
