--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ add_subdirectory(16-alpha-blend)
 add_subdirectory(17-face-culling)
 add_subdirectory(18-frame-buffer)
 add_subdirectory(19-cube-map)
+add_subdirectory(20-interface-block)
 
 ##################### demo
 # add_executable(imgui_demo 3rdparty/imgui/imgui_demo.cpp)
