[feat](nanoR) start doing ecs

--- a/nanoR/CMakeLists.txt
+++ b/nanoR/CMakeLists.txt
@@ -1,7 +1,19 @@
 include_directories(./src)
-file(GLOB_RECURSE src COFIGURE_DEPENDS *.cpp)
-# aux_source_directory(./src src)
+file(
+  GLOB_RECURSE 
+  src 
+  COFIGURE_DEPENDS 
+  src/*.cpp
+)
 
 add_executable(nanoR ${src})
 target_link_libraries(nanoR PRIVATE glfw glad assimp::assimp imgui fmt::fmt)
 target_precompile_headers(nanoR PRIVATE src/nanorpch.h)
+
+file(
+  GLOB_RECURSE 
+  test
+  COFIGURE_DEPENDS 
+  test/*.cpp
+)
+add_executable(nanoR_test ${test})
