[feat(WIP)](nanoR) use ecs to construct scene

--- a/nanoR/CMakeLists.txt
+++ b/nanoR/CMakeLists.txt
@@ -4,8 +4,9 @@ file(
   src 
   COFIGURE_DEPENDS 
   src/*.cpp
+  sandbox.cpp
 )
 
 add_executable(nanoR ${src})
-target_link_libraries(nanoR PRIVATE glfw glad assimp::assimp imgui fmt::fmt)
+target_link_libraries(nanoR PRIVATE glfw glad assimp::assimp imgui fmt::fmt pico_libs::ecs)
 target_precompile_headers(nanoR PRIVATE src/nanorpch.h)
