--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,12 +62,20 @@ FetchContent_Declare(imgui
                      GIT_TAG        v1.89.9-docking
 )
 
+FetchContent_Declare(shaderc
+                     GIT_REPOSITORY https://github.com/google/shaderc.git
+                     GIT_TAG        v2023.8
+)
+option(SHADERC_SKIP_TESTS ON)
+option(SHADERC_SKIP_EXAMPLES ON)
+
+
 FetchContent_Declare(pico_libs
                      GIT_REPOSITORY https://github.com/Katzeee/pico_libs
                      GIT_TAG        v0.0.1
 )
 
-FetchContent_MakeAvailable(glfw assimp fmt glad pico_libs)
+FetchContent_MakeAvailable(glfw assimp fmt glad pico_libs shaderc)
 include(3rdparty/imgui.cmake)
 include(3rdparty/glm.cmake)
 
