--- a/nanoR/CMakeLists.txt
+++ b/nanoR/CMakeLists.txt
@@ -8,5 +8,6 @@ file(
 )
 
 add_executable(nanoR ${src})
-target_link_libraries(nanoR PRIVATE glfw glad assimp::assimp imgui fmt::fmt pico_libs::ecs)
+target_include_directories(nanoR PRIVATE ${shaderc_SOURCE_DIR})
+target_link_libraries(nanoR PRIVATE glfw glad assimp::assimp imgui fmt::fmt pico_libs::ecs shaderc shaderc_util glslc)
 target_precompile_headers(nanoR PRIVATE src/nanorpch.h)
