--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ ELSEIF (UNIX)
 	MESSAGE(STATUS "Now on UNIX-like OS's.")
 ENDIF ()
 
+set (CMAKE_BUILD_TYPE Debug)
 if (NOT CMAKE_BUILD_TYPE)
   set (CMAKE_BUILD_TYPE Release)
 else()
@@ -24,6 +25,7 @@ set(CMAKE_CXX_STANDARD 20)
 if (MSVC)
   # set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MDd /fsanitize=address")
   # set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd /fsanitize=address")
+  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>") # fix LNK2038: mismatch detected for 'RuntimeLibrary' bug
 else()
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
@@ -54,7 +56,7 @@ FetchContent_Declare(assimp
 
 FetchContent_Declare(fmt
                      GIT_REPOSITORY https://github.com/fmtlib/fmt
-                     GIT_TAG        10.1.0
+                     GIT_TAG        10.1.1
 )
 
 FetchContent_Declare(imgui
@@ -62,12 +64,14 @@ FetchContent_Declare(imgui
                      GIT_TAG        v1.89.9-docking
 )
 
+option(SHADERC_SKIP_TESTS "" ON)
+option(SHADERC_SKIP_EXAMPLES "" ON)
+option(SHADERC_ENABLE_TESTS "" OFF)
+
 FetchContent_Declare(shaderc
                      GIT_REPOSITORY https://github.com/google/shaderc.git
                      GIT_TAG        v2023.8
 )
-option(SHADERC_SKIP_TESTS ON)
-option(SHADERC_SKIP_EXAMPLES ON)
 
 FetchContent_Declare(spirv-cross
                      GIT_REPOSITORY https://github.com/KhronosGroup/SPIRV-Cross.git
@@ -83,7 +87,7 @@ FetchContent_MakeAvailable(glfw assimp fmt glad pico_libs shaderc spirv-cross)
 include(3rdparty/imgui.cmake)
 include(3rdparty/glm.cmake)
 
-add_subdirectory(nanoR)
+add_subdirectory(00-nanoR)
 add_subdirectory(01-create-window)
 add_subdirectory(02-simple-triangle)
 add_subdirectory(03-shader-class)
