[init](25) first window for vulkan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,8 @@ FetchContent_Declare(pico_libs
 )
 
 FetchContent_MakeAvailable(glfw assimp fmt glad pico_libs shaderc spirv-cross)
+find_package(Vulkan REQUIRED)
+
 include(3rdparty/imgui.cmake)
 include(3rdparty/glm.cmake)
 
@@ -112,6 +114,7 @@ add_subdirectory(21-blinn-phong)
 add_subdirectory(22-shadow)
 add_subdirectory(23-pbr)
 add_subdirectory(24-ibl)
+add_subdirectory(25-vulkan-start)
 
 ##################### demo
 # add_executable(imgui_demo 3rdparty/imgui/imgui_demo.cpp)
