--- a/25-vulkan-start/CMakeLists.txt
+++ b/25-vulkan-start/CMakeLists.txt
@@ -4,4 +4,4 @@ include_directories(./src)
 file(GLOB_RECURSE src COFIGURE_DEPENDS src/*.cpp)
 add_executable(${EXE_NAME} ${src})
 target_include_directories(${EXE_NAME} PUBLIC ${Vulkan_INCLUDE_DIRS})
-target_link_libraries(${EXE_NAME} PRIVATE glfw ${Vulkan_LIBS})
+target_link_libraries(${EXE_NAME} PRIVATE glfw ${Vulkan_LIBRARIES})
