--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 project(learn-opengl C CXX)
-set(EXPORT_COMPILE_COMMANDS ON) # generate compile database
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # generate compile database
 
 IF (WIN32)
 # add_definitions(-DWIN32)
