feat:26 assimp load model as tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,3 +118,4 @@ add_subdirectory(24-ibl)
 if (${Vulkan_LIBRARIES})
   add_subdirectory(25-vulkan-start)
 endif()
+add_subdirectory(26-deep-assimp)
